--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,64 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+  text-align: left;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+h4 {
+  background: #005eaa;
+  padding: 1rem;
+  color: #fff;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.section-wrapper {
+  display: flex;
+  margin: 2rem 0rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.section-left {
+  display: flex;
+  width: 700px;
+  height: 400px;
 }
 
-.card {
-  padding: 2em;
+.section-right {
+  display: flex;
+  display: flex;
+  width: 216px;
+  margin-left: -3rem;
+  margin-top: 2rem;
 }
 
-.read-the-docs {
-  color: #888;
+.section-left-cove {
+  width: 450px;
+  margin-left: 3rem;
+}
+
+.section-right-cove {
+  position: absolute;
+  top: 12rem;
+  right: 1rem;
+  width: 46vw;
+}
+
+.section-right.section-right-rechart-bar {
+  margin-top: 0;
+  width: 28vw;
+  margin-left: -3.25rem;
+}
+
+.section-wrapper.section-wrapper-rechart-pie {
+  margin-top: -0.5rem;
+}
+
+b {
+  display: contents;
+}
+
+.section-wrapper-nivo-bar {
+  margin-top: -1rem;
+}
+
+.section-wrapper-nivo-pie .section-right {
+  margin-top: 0.5rem;
 }
